...

import UIKit

class OnboardingViewController: UIViewController {

    @IBOutlet weak var contentView: UIView!
    let dataSource = ["Welcome", "Set your route", "Train with your friends", "Choose your workout"]
    var currentViewControllerIndex = 0
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        configurePageViewController()
...
